// https://github.com/GoogleCloudPlatform/spring-cloud-gcp/tree/main/spring-cloud-gcp-samples/spring-cloud-gcp-vision-api-sample

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'com.gradleup.shadow' version '9.3.1'
}

group = 'com.matchalab'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}
// sourceSets {
//     main {
//         java {
//             srcDir "${project.buildDir}/generated/sources/annotationProcessor/java"
//         }
//     }
//     test {
//         java {
//             srcDirs "${project.buildDir}/generated/sources/annotationProcessor/java"
//         }
//     }
// }

dependencyManagement {
    imports {
        mavenBom 'com.google.cloud:spring-cloud-gcp-dependencies:6.2.2'
    }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql' 

    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

	compileOnly 'org.projectlombok:lombok'    
	annotationProcessor 'org.projectlombok:lombok'  
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    /* DB */
    implementation 'org.postgresql:postgresql'

    /* Mapstruct */
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'   
    testAnnotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0' 
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

    /* Security */
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
    
    /* OAuth2.0 */
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    /* Google */
    implementation"com.google.api-client:google-api-client:2.8.0"

    /* Google - Gemini */
    implementation platform("org.springframework.ai:spring-ai-bom:1.1.2")
    implementation "org.springframework.ai:spring-ai-starter-model-google-genai"

    /* Jsoup */
    implementation "org.jsoup:jsoup:1.21.2"

    /* jakarta.mail */
    implementation "com.sun.mail:jakarta.mail:2.0.2"

    /* jackson-databind-nullable */
    implementation "org.openapitools:jackson-databind-nullable:0.2.7"

    implementation 'org.springframework.session:spring-session-core'
    implementation 'org.springframework.session:spring-session-jdbc'

    // https://mvnrepository.com/artifact/com.giffing.bucket4j.spring.boot.starter/bucket4j-spring-boot-starter
    implementation("com.giffing.bucket4j.spring.boot.starter:bucket4j-spring-boot-starter:0.13.0")

    // https://mvnrepository.com/artifact/org.flywaydb/flyway-core
    implementation "org.flywaydb:flyway-core:11.17.0"

    implementation 'org.springframework.boot:spring-boot-starter-validation'

    /* Cache */
    implementation "org.springframework.boot:spring-boot-starter-cache"
    
    // https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine
    implementation("com.github.ben-manes.caffeine:caffeine:3.2.3")

    // https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/jcache
    implementation("com.github.ben-manes.caffeine:jcache:3.2.3")

    // https://mvnrepository.com/artifact/org.flywaydb/flyway-database-postgresql
    runtimeOnly("org.flywaydb:flyway-database-postgresql:11.17.0")

    // AWS
    implementation(platform("software.amazon.awssdk:bom:2.25.0"))
    implementation("software.amazon.awssdk:ssm")

    // Actuator
    implementation("org.springframework.boot:spring-boot-starter-actuator")

    /* Test */
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.assertj:assertj-core:3.27.2'
    testImplementation "org.awaitility:awaitility:4.3.0"
    // testImplementation "org.awaitility:awaitility:4.3.0"
    // testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    // testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'

    /* TestContainer */
    testImplementation("org.springframework.boot:spring-boot-testcontainers")
    testImplementation("org.testcontainers:junit-jupiter")
    testImplementation("org.testcontainers:postgresql")
}

test {
	useJUnitPlatform()
    def cliProfiles = System.getProperty('spring.profiles.active')
    def activeProfiles = cliProfiles ? "${cliProfiles},test" : "test"
    systemProperty 'spring.profiles.active', activeProfiles
}

shadowJar {
    zip64 = true
    mergeServiceFiles()
    append 'META-INF/spring.handlers'
    append 'META-INF/spring.schemas'
    append 'META-INF/spring.tooling'

    manifest {
        attributes(
                'Main-Class': 'com.matchalab.travel_todo_api.TravelTodoApiApplication'
        )
    }
}

tasks.register('buildLambdaWebAdapterZip', Zip) {
    dependsOn 'bootJar'
    zip64 = true
    from('run.sh') {
        filePermissions { user { execute = true }; group { execute = true }; other { execute = true } }
    }
    from(tasks.bootJar) {
        rename { 'app.jar' }
    }
}

tasks.named('bootBuildImage') {
    imagePlatform = 'linux/amd64'
    // image.builder.platforms.set(['linux/amd64']) 
}

ext['testcontainers.version'] = '1.21.4'

// tasks.withType(JavaCompile).configureEach {
//     if (name.contains("Test")) {
//         options.compilerArgs << "-proc:none"
//     }
// }

// tasks.named('compileTestJava', JavaCompile) {
//     options.compilerArgs.add("-proc:none")
// }
